# chembank

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: windows.yaml
example/export/: components.csv  properties.csv  structures.csv
src/: ComponentView.tsx  Export.tsx  Home.tsx  Import.tsx  StructureView.tsx  bindings.ts  main.tsx  rdkit.ts  useFetch.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/entities/: Cargo.toml
src-tauri/entities/src/: component.rs  image.rs  lib.rs  links.rs  property.rs  structure.rs
src-tauri/export/: structures.csv
src-tauri/src/: main.rs  property.rs
